fix(data-table): Fixed horizontal scrolling issue with pagination controls
When data table is set to fixed width or set to width of parent, horizontal scrollbar is shown to entire table component including pagination bar. This makes the pagination bar being clipped when scroll to the right. This PR fixes horizontal scrolling issue where scrollbar appears below table and above pagination bar.

BREAKING CHANGE: Added a wrapper element to data table's table element to fix horizontal scrolling issue when pagination controls are added.

PiperOrigin-RevId: 312342190

--- a/packages/mdc-data-table/_mixins.scss
+++ b/packages/mdc-data-table/_mixins.scss
@@ -37,7 +37,10 @@
 
 @mixin core-styles($query: feature-targeting-functions.all()) {
   $feat-structure: feature-targeting-functions.create-target($query, structure);
-  $feat-typography: feature-targeting-functions.create-target($query, typography);
+  $feat-typography: feature-targeting-functions.create-target(
+    $query,
+    typography
+  );
   $feat-animation: feature-targeting-functions.create-target($query, animation);
 
   // postcss-bem-linter: define data-table
@@ -66,12 +69,24 @@
   // because it makes it difficult to consume by projects that wrap their
   // themes in a class (e.g. `.my-theme { @include mdc-data-table-core-style() }`).
   @include row-fill-color(variables.$row-fill-color, $query: $query);
-  @include header-row-fill-color(variables.$header-row-fill-color, $query: $query);
-  @include selected-row-fill-color(variables.$selected-row-fill-color, $query: $query);
+  @include header-row-fill-color(
+    variables.$header-row-fill-color,
+    $query: $query
+  );
+  @include selected-row-fill-color(
+    variables.$selected-row-fill-color,
+    $query: $query
+  );
   @include divider-color(variables.$divider-color, $query: $query);
   @include divider-size(variables.$divider-size, $query: $query);
-  @include row-hover-fill-color(variables.$row-hover-fill-color, $query: $query);
-  @include header-row-text-color(variables.$header-row-text-color, $query: $query);
+  @include row-hover-fill-color(
+    variables.$row-hover-fill-color,
+    $query: $query
+  );
+  @include header-row-text-color(
+    variables.$header-row-text-color,
+    $query: $query
+  );
   @include row-text-color(variables.$row-text-color, $query: $query);
   @include density(variables.$default-density-scale, $query: $query);
   @include cell-padding(
@@ -80,7 +95,16 @@
     $query: $query
   );
   @include sort-icon-color(variables.$sort-icon-color, $query: $query);
-  @include sort-icon-active-color(variables.$sort-icon-active-color, $query: $query);
+  @include sort-icon-active-color(
+    variables.$sort-icon-active-color,
+    $query: $query
+  );
+
+  .mdc-data-table__table-container {
+    @include feature-targeting-mixins.targets($feat-structure) {
+      overflow-x: auto;
+    }
+  }
 
   .mdc-data-table__table {
     @include feature-targeting-mixins.targets($feat-structure) {
@@ -155,7 +179,8 @@
   .mdc-data-table__sort-icon-button {
     @include icon-button-mixins.density(
       $density-scale: variables.$sort-icon-density-scale,
-      $query: $query);
+      $query: $query
+    );
 
     @include feature-targeting-mixins.targets($feat-structure) {
       @include rtl-mixins.reflexive-box(margin, left, 4px);
@@ -280,7 +305,10 @@
 
 /// Sets the color of sort icon button when it is activated (sorted).
 /// @param {String} $color - Color of sort icon button
-@mixin sort-icon-active-color($color, $query: feature-targeting-functions.all()) {
+@mixin sort-icon-active-color(
+  $color,
+  $query: feature-targeting-functions.all()
+) {
   $feat-color: feature-targeting-functions.create-target($query, color);
 
   .mdc-data-table__header-cell--sorted .mdc-data-table__sort-icon-button {
@@ -292,16 +320,19 @@
   $feat-color: feature-targeting-functions.create-target($query, color);
 
   @include feature-targeting-mixins.targets($feat-color) {
-    @include theme-mixins.prop("background-color", $color);
+    @include theme-mixins.prop('background-color', $color);
   }
 }
 
-@mixin header-row-fill-color($color, $query: feature-targeting-functions.all()) {
+@mixin header-row-fill-color(
+  $color,
+  $query: feature-targeting-functions.all()
+) {
   $feat-color: feature-targeting-functions.create-target($query, color);
 
   .mdc-data-table__header-row {
     @include feature-targeting-mixins.targets($feat-color) {
-      @include theme-mixins.prop("background-color", $color);
+      @include theme-mixins.prop('background-color', $color);
     }
   }
 }
@@ -311,17 +342,20 @@
 
   .mdc-data-table__row {
     @include feature-targeting-mixins.targets($feat-color) {
-      @include theme-mixins.prop("background-color", $color);
+      @include theme-mixins.prop('background-color', $color);
     }
   }
 }
 
-@mixin selected-row-fill-color($color, $query: feature-targeting-functions.all()) {
+@mixin selected-row-fill-color(
+  $color,
+  $query: feature-targeting-functions.all()
+) {
   $feat-color: feature-targeting-functions.create-target($query, color);
 
   .mdc-data-table__row--selected {
     @include feature-targeting-mixins.targets($feat-color) {
-      @include theme-mixins.prop("background-color", $color);
+      @include theme-mixins.prop('background-color', $color);
     }
   }
 }
@@ -330,7 +364,11 @@
   .mdc-data-table__header-row-checkbox,
   .mdc-data-table__row-checkbox {
     @include checkbox-mixins.focus-indicator-color($color, $query: $query);
-    @include checkbox-mixins.container-colors($marked-stroke-color: $color, $marked-fill-color: $color, $query: $query);
+    @include checkbox-mixins.container-colors(
+      $marked-stroke-color: $color,
+      $marked-fill-color: $color,
+      $query: $query
+    );
   }
 }
 
@@ -362,17 +400,20 @@
 
   .mdc-data-table__row:not(.mdc-data-table__row--selected):hover {
     @include feature-targeting-mixins.targets($feat-color) {
-      @include theme-mixins.prop("background-color", $color);
+      @include theme-mixins.prop('background-color', $color);
     }
   }
 }
 
-@mixin header-row-text-color($color, $query: feature-targeting-functions.all()) {
+@mixin header-row-text-color(
+  $color,
+  $query: feature-targeting-functions.all()
+) {
   $feat-color: feature-targeting-functions.create-target($query, color);
 
   .mdc-data-table__header-cell {
     @include feature-targeting-mixins.targets($feat-color) {
-      @include theme-mixins.prop("color", $color);
+      @include theme-mixins.prop('color', $color);
     }
   }
 }
@@ -382,12 +423,16 @@
 
   .mdc-data-table__cell {
     @include feature-targeting-mixins.targets($feat-color) {
-      @include theme-mixins.prop("color", $color);
+      @include theme-mixins.prop('color', $color);
     }
   }
 }
 
-@mixin shape-radius($radius, $rtl-reflexive: false, $query: feature-targeting-functions.all()) {
+@mixin shape-radius(
+  $radius,
+  $rtl-reflexive: false,
+  $query: feature-targeting-functions.all()
+) {
   @include shape-mixins.radius($radius, $rtl-reflexive, $query: $query);
 }
 
@@ -432,7 +477,8 @@
 @mixin cell-padding(
   $leading-padding: variables.$cell-leading-padding,
   $trailing-padding: variables.$cell-trailing-padding,
-  $query: feature-targeting-functions.all()) {
+  $query: feature-targeting-functions.all()
+) {
   $feat-structure: feature-targeting-functions.create-target($query, structure);
 
   .mdc-data-table__cell,
@@ -471,7 +517,6 @@
 ///     `-3`, `-2`, `-1`, `0`.
 ///
 @mixin density($density-scale, $query: feature-targeting-functions.all()) {
-
   $height: density-functions.prop-value(
     $density-config: variables.$density-config,
     $density-scale: $density-scale,
@@ -479,7 +524,10 @@
   );
 
   @include cell-height($height, $query: $query);
-  @include header-cell-height(variables.get-header-cell-height($height), $query: $query);
+  @include header-cell-height(
+    variables.get-header-cell-height($height),
+    $query: $query
+  );
 }
 
 @mixin theme-baseline($query: feature-targeting-functions.all()) {
